--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--
+	Author  : Suresh Pokharel
+	Email   : suresh.wrc@gmail.com
+	GitHub  : github.com/suresh021
+	URL     : psuresh.com.np
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
